data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_763.wast
;; 4. **Test Description**:    Precede a `br_table` instruction with a complex control flow containing multiple `nop` and nested blocks. The test should check if the `nop` instructions interfere with the nested structure's validation.      **Specific Constraint**: Context and control flow impact of nested blocks with `nop`.      **Edge Case**: Nested structures with `br_table`.

(assert_invalid
  (module
    (func $nested-nops
      (block
        (loop
          (block
            (nop)
            (br_table 0 0 0 (i32.const 0))
          )
        )
      )
    )
  )
  "type mismatch"
)